--- a/pchouse/PChouseA.html
+++ b/pchouse/PChouseA.html
@@ -87,13 +87,13 @@
           text += '      <img src="'+picture[i]+'">'
           text += '    </div>';
           text += '    <div class="card-content">';
-          text += '      <h5><b><a href="xx.html?id=' + i + '" target=_blank>'+monitors[i][0]+'</b></h5></a>';
+          text += '      <h5><b><a class="black-text-1" href="xx.html?id=' + i + '" target=_blank>'+monitors[i][0]+'</b></h5></a>';
           text += '      <h5  style="color:red;"><b>'+monitors[i][1]+'</b></h5>';
           text += '    </div>';
           text += '    <div class="card-action">';
-          for(j = 0; j < 5; j++){
-          text += '      <p>'+descrip[i][j]+'</p>';
-          }
+          //for(j = 0; j < 5; j++){
+          //text += '      <p>'+descrip[i][j]+'</p>';
+          //}
           text += '    </div>'
           text += '  </div>';
           text += '</div>';
