--- a/items.html
+++ b/items.html
@@ -64,14 +64,18 @@
     <header>
     	<nav class="nav-extended grey darken-4">
 		    <div class="nav-wrapper">
-		      <a href="#" class="brand-logo">Marvel's Universe Films</a>
-		      <a class="brand-logo center"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Marvel_Logo.svg/2560px-Marvel_Logo.svg.png" height="70px" width="200px"></a>
-		      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-		      <ul id="nav-mobile" class="right hide-on-med-and-down">
-		        <li><a href="sass.html">Sass</a></li>
-		        <li><a href="badges.html">Components</a></li>
-		        <li><a href="collapsible.html">JavaScript</a></li>
-		      </ul>
+		      	<a href="index.html" class="brand-logo">Marvel Cinematic Universe films</a>
+		      	<a class="brand-logo center">
+		      		<div class="card-image center">
+		      			<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Marvel_Logo.svg/2560px-Marvel_Logo.svg.png" height="70px" width="200px">
+		      		</div>
+		      	</a>
+		      	<a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+		      	<ul id="nav-mobile" class="right hide-on-med-and-down">
+		        	<li><a href="sass.html">Sass</a></li>
+		        	<li><a href="badges.html">Components</a></li>
+		        	<li><a href="collapsible.html">JavaScript</a></li>
+		      	</ul>
 		    </div>
 		    <div class="nav-content">
 		      <ul class="tabs tabs-transparent">
@@ -127,6 +131,37 @@
                    "https://upload.wikimedia.org/wikipedia/en/e/e9/Black_Widow_%282021_film%29_poster.jpg",
                    "https://upload.wikimedia.org/wikipedia/en/7/74/Shang-Chi_and_the_Legend_of_the_Ten_Rings_poster.jpeg",
                    "https://upload.wikimedia.org/wikipedia/en/9/9b/Eternals_%28film%29_poster.jpeg"];
+        films = ["Iron Man (2008)",
+	             "The Increadible Hulk (2008)",
+	             "Iron Man 2 (2010)",
+	             "Thor (2011)",
+	             "Captain America The First Avenger (2011)",
+	             "The Avengers (2012)",
+	             "Iron Man 3 (2013)",
+	             "Thor: The Dark World (2013)",
+	             "Captain America: The Winter Soldier (2014)",
+	             "Guardians of the Galaxy (2014)",
+	             "Avengers: Age of Ultron (2015)",
+	             "Ant-Man (2015)",
+	             "Captain America: Civil War (2016)",
+	             "Doctor Strange (2016)",
+	             "Guardians of the Galaxy Vol. 2 (2017)",
+	             "Spider-Man: Homecoming (2017)",
+	             "Thor: Ragnarok (2017)",
+	             "Black Panther (2018)",
+	             "Avengers: Infinity War (2018)",
+	             "Ant-Man and the Wasp (2018)",
+	             "Captain Marvel (2019)",
+	             "Avengers: Endgame (2019)",
+	             "Spider-Man: Far From Home (2019)",
+	             "Black Widow (2021)",
+	             "Shang-Chi and the Legend of the Ten Rings (2021)",
+	             "Eternals (2021)"];
+
+        description = ["Iron Man is a 2008 American superhero film based on the Marvel Comics character of the same name. Produced by Marvel Studios and distributed by Paramount Pictures,[N 1] it is the first film in the Marvel Cinematic Universe (MCU). Directed by Jon Favreau from a screenplay by the writing teams of Mark Fergus and Hawk Ostby, and Art Marcum and Matt Holloway, the film stars Robert Downey Jr. as Tony Stark / Iron Man alongside Terrence Howard, Jeff Bridges, Shaun Toub, and Gwyneth Paltrow. In the film, following his escape from captivity by a terrorist group, world famous industrialist and master engineer Tony Stark builds a mechanized suit of armor and becomes the superhero Iron Man.",
+        			   "",
+        			   "",
+        			   ""];
 
  		function writeText(idNum){
  			var text="";
@@ -137,9 +172,13 @@
  					'		</div>'+
  					'	</div>'+
  					'</div>'+
- 					'<div class="col s8>'+
+ 					'<div class="col s8 l8>'+
  					'	<div class="card">'+
- 					'		<h4> Iron man 3 asdasd asd asd asdasdasd asd asd adsas dasd asd</h4>'+
+ 					'		<h4> ' + films[idNum] + '</h4>'+
+ 					'		<div class="divider"></div>'+
+ 					'		<div class="card-content">'+
+ 					'			<p>' + description[idNum] +'</p>'+
+ 					'		</div>'+
  					'	</div>'+
  					'</div>';
 
