--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <header>
     	<nav class="nav-extended grey darken-4">
 		    <div class="nav-wrapper">
-		      	<a href="index.html" class="brand-logo">Marvel's Universe Films</a>
+		      	<a href="index.html" class="brand-logo">Marvel Cinematic Universe films</a>
 		      	<a class="brand-logo center">
 		      		<div class="card-image center">
 		      			<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Marvel_Logo.svg/2560px-Marvel_Logo.svg.png" height="70px" width="200px">
