items completed with data

--- a/index.html
+++ b/index.html
@@ -52,16 +52,12 @@
 		    <div class="nav-wrapper">
 		      	<a href="index.html" class="brand-logo">Marvel Cinematic Universe films</a>
 		      	<a class="brand-logo center">
+		      		
 		      		<div class="card-image center">
 		      			<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Marvel_Logo.svg/2560px-Marvel_Logo.svg.png" height="70px" width="200px">
 		      		</div>
 		      	</a>
-		      	<a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-		      	<ul id="nav-mobile" class="right hide-on-med-and-down">
-		        	<li><a href="sass.html">Sass</a></li>
-		        	<li><a href="badges.html">Components</a></li>
-		        	<li><a href="collapsible.html">JavaScript</a></li>
-		      	</ul>
+		      	<a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>	
 		    </div>
 		    <div class="nav-content">
 		      <ul class="tabs tabs-transparent">
@@ -154,7 +150,7 @@
 	                   "Iron Man 2 (2010)",
 	                   "Thor (2011)",
 	                   "Captain America The First Avenger (2011)",
-	                   "The Avengers (2012)"],
+	                   "Marvel's The Avengers (2012)"],
 	                   ["Iron Man 3 (2013)",
 	                   	"Thor: The Dark World (2013)",
 	                   	"Captain America: The Winter Soldier (2014)",
