--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@
 			          			'</div>';
 			          	if(i <= 6){
 			          		text1 += T;
-			          	}else if(i <= 13){
+			          	}else if(i < 12){
 			          		text2 += T;
-			          	}else if(i <= 25){
+			          	}else if(i < 24){
 			          		text3 +=T;
-			          	}else if(i <= 27){
+			          	}else if(i < 26){
 			          		text4 +=T;
 			          	}
 			          	//text += T;
