--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 			 				let T = '<div class="col s12 m6 l3">'+
 			 							  '	<div class="card hoverable  grey lighten-1">'+
 			          			'		<div class="card-image center grey lighten-1">'+
-			          			'			<img src="'+data.getFormattedValue(i,2)+'">'+
+			          			'			<img src="'+data.getFormattedValue(i,2)+'"style="width:500px;height:600px>'+
 			          			'		</div>'+
 			          			'    	<div class="card-content grey lighten-1">'+
 			          			'      		<h6><b><a class="black-text">'+data.getFormattedValue(i,1)+'</b></a></h6>'+
