--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
 	        	
 			 				let T = '<div class="col s12 m6 l3">'+
 			 							  '	<div class="card hoverable  grey lighten-1">'+
-			          			'		<div class="card-image center grey lighten-1">'+
-			          			'			<img src="'+data.getFormattedValue(i,2)+'"style="width:300px;height:400px>'+
+			          			'		<div class="card-image medium center grey lighten-1">'+
+			          			'			<img src="'+data.getFormattedValue(i,2)+'">'+
 			          			'		</div>'+
 			          			'    	<div class="card-content grey lighten-1">'+
 			          			'      		<h6><b><a class="black-text">'+data.getFormattedValue(i,1)+'</b></a></h6>'+
