--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
 			          			'			<img src="'+data.getFormattedValue(i,2)+'">'+
 			          			'		</div>'+
 			          			'    	<div class="card-content grey lighten-1">'+
-			          			'      		<h6><b><a class="black-text">'+data.getFormattedValue(i,1)+'</b></a></h6>'+
+			          			'      		<span class="card-title">'+data.getFormattedValue(i,1)+'</span>'+
 			          			'    	</div>'+
 			          			'    	<div class="card-action grey lighten-1">'+
-			          			'      		<a class="teal-text" href="'+data.getFormattedValue(i,3)+'">More-></a>'+
+			          			'      		<a href='+data.getFormattedValue(i,3)+'">More-></a>'+
 			          			'    	</div>'+
 			          			'  	</div>'+
 			          			'</div>';
