--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 	        	
 			 				let T = '<div class="col s12 m6 l3">'+
 			 							  '	<div class="card hoverable  grey lighten-1">'+
-			          			'		<div class="card-image medium center grey lighten-1">'+
+			          			'		<div class="card-image small center grey lighten-1">'+
 			          			'			<img src="'+data.getFormattedValue(i,2)+'">'+
 			          			'		</div>'+
 			          			'    	<div class="card-content grey lighten-1">'+
