--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
     </header>
 
     <style type="text/css">
-    	/*.card-image{
+    	.card-image{
     		height: 400px;
     		overflow: hidden;
-    	}*/
+    	}
     </style>
 
     <body style="background-color:white;">
