--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 			          			'      		<span class="card-title">'+data.getFormattedValue(i,1)+'</span>'+
 			          			'    	</div>'+
 			          			'    	<div class="card-action grey lighten-1">'+
-			          			'      		<a href='+data.getFormattedValue(i,3)+'">More-></a>'+
+			          			'      		<a href="'+data.getFormattedValue(i,3)+'">More-></a>'+
 			          			'    	</div>'+
 			          			'  	</div>'+
 			          			'</div>';
