--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
     	<nav class="nav-extended grey darken-4">
 		    <div class="nav-wrapper">
 		      <a href="index.html" class="brand-logo">	Marvel Cinematic Universe Films</a>
+		      <a class="brand-logo center">
 		      <div class="card-image center">
 		      	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Marvel_Logo.svg/2560px-Marvel_Logo.svg.png" height="70px" width="200px">
 		      </div>
-		      
+		      </a>
 		      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>	
 		    </div>
 		    <div class="nav-content">
