--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
 		      	<li class="tab"><a href="#phase4">Phase 4</a></li>
 		      </ul>
 		    </div>
+		    <ul class="sidenav" id="mobile-demo">
+			    <li class="tab"><a href="#phase1">Phase 1</a></li>
+		      <li class="tab"><a href="#phase2">Phase 2</a></li>
+		      <li class="tab"><a href="#phase3">Phase 3</a></li>
+		      <li class="tab"><a href="#phase4">Phase 4</a></li>
+  			</ul>
 			</nav>
     </header>
 
