--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
 		      	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/Marvel_Logo.svg/2560px-Marvel_Logo.svg.png" height="70px" width="200px">
 		      </div>
 		      </a>
-		      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>	
+		      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+		      <ul id="nav-mobile" class="right hide-on-med-and-down">
+		        <li><a href="index.html">Home</a></li>
+		        <li><a href="about.html">About</a></li>
+		        <li><a href="news.html">Lastest News</a></li>
+      		</ul>	
 		    </div>
 		    <div class="nav-content">
 		      <ul class="tabs tabs-transparent">
@@ -68,11 +73,10 @@
 		    </div>
 			</nav>
 			<ul class="sidenav" id="mobile-demo">
-			    <li class="tab"><a href="#phase1">Phase 1</a></li>
-		      <li class="tab"><a href="#phase2">Phase 2</a></li>
-		      <li class="tab"><a href="#phase3">Phase 3</a></li>
-		      <li class="tab"><a href="#phase4">Phase 4</a></li>
-  			</ul>
+		    <li><a href="index.html">Home</a></li>
+		    <li><a href="about.html">About</a></li>
+		    <li><a href="news.html">Lastest News</a></li>
+  		</ul>
     </header>
 
     <style type="text/css">
