--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 		}
 		
     </style>
+<!----------------------------------NAV BAR----------------------------------->
     	<nav class="nav-extended grey darken-4">
 		    <div class="nav-wrapper">
 		      <a href="index.html" class="brand-logo">	Marvel Cinematic Universe Films</a>
@@ -78,7 +79,7 @@
 		  <li><a href="about.html">About</a></li>
 		  <li><a href="news.html">Lastest News</a></li>
   	</ul>
-
+<!----------------------------------NAV BAR----------------------------------->
     <style type="text/css">
     	.card-image{
     		height: 400px;
