--- a/about.html
+++ b/about.html
@@ -120,13 +120,14 @@
 
 
 			 			var text="";
-			 			let T =
-			 					'<div class="card">'+
-			 					'	<div class="card-image">'+
-			 					'	<img src="' + data.getFormattedValue(27, 2) +'">'+
+			 			let T = '<div class="col s12">'+
+			 					'	<div class="card">'+
+			 					'		<div class="card-image">'+
+			 					'			<img src="' + data.getFormattedValue(27, 2) +'">'+
+			 					'		</div>'+
 			 					'	</div>'+
 			 					'</div>'+
-			 					'<div class="col s8 l8>'+
+			 					'<div class="col s12>'+
 			 					'	<div class="card">'+
 			 					'		<h4> ' + data.getFormattedValue(27, 1) + '</h4>'+
 			 					'		<div class="divider"></div>'+
