--- a/about.html
+++ b/about.html
@@ -120,14 +120,15 @@
 
 
 			 			var text="";
-			 			let T = '<div class="col s12">'+
+			 			let T = 
+			 					'<div class="col s12 m6">'+
 			 					'	<div class="card">'+
 			 					'		<div class="card-image">'+
 			 					'			<img src="' + data.getFormattedValue(27, 2) +'">'+
 			 					'		</div>'+
 			 					'	</div>'+
 			 					'</div>'+
-			 					'<div class="col s12>'+
+			 					'<div class="col s12 m6>'+
 			 					'	<div class="card">'+
 			 					'		<h4> ' + data.getFormattedValue(27, 1) + '</h4>'+
 			 					'		<div class="divider"></div>'+
