--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
 
 			 			var text="";
 			 			let T = 
-			 					'<div class="col s12 m6">'+
+			 					'<div class="col s12">'+
 			 					'	<div class="card">'+
 			 					'		<div class="card-image">'+
 			 					'			<img src="' + data.getFormattedValue(27, 2) +'">'+
