--- a/about.html
+++ b/about.html
@@ -132,16 +132,13 @@
 			 					'	<div class="card">'+
 			 					'		<h4> ' + data.getFormattedValue(27, 1) + '</h4>'+
 			 					'		<div class="divider"></div>'+
-			 					'       <p><b> Directed by:</b> '+ data.getFormattedValue(27, 4) + '</p>'+
-			 					'		<p><b> Starring:</b> '+ data.getFormattedValue(27, 5) + '</p>' +
+			 					'		<p>'+ data.getFormattedValue(27, 6) + '</p>' +
+			 					'   <h6><b> Corporate Headquarters</b></h6>'+
+			 					'   <p>'+ data.getFormattedValue(27, 8) + '</p>'+
+			 										// INSERT GOOGLE MAP
+			 					'   <h6><b> Contact Us </b></h6>'+
 			 					'		<p></p>'+
 			 					'		<div class="divider"></div>'+
-			 					'		<div class="card-content">'+
-			 					'			<p>' + data.getFormattedValue(27, 6) +'</p>'+
-			 					'		</div>'+
-			 					'		<div class="video-container">'+
-			        			'			<iframe width="900" height="506" src="'+data.getFormattedValue(27, 7)+'" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>'+
-			      				'		</div>'+
 			 					'	</div>'+
 			 					'</div>';
 
