--- a/about.html
+++ b/about.html
@@ -134,9 +134,7 @@
 			 					'		<div class="divider"></div>'+
 			 					'		<p>'+ data.getFormattedValue(27, 6) + '</p>' +
 			 					'   <h6><b> Corporate Headquarters</b></h6>'+
-			 					'   <p>'+ data.getFormattedValue(27, 8) + '</p>'+
-			 					'   <p>'+ data.getFormattedValue(28, 8) + '</p>'+
-			 					'   <p>'+ data.getFormattedValue(29, 8) + '</p>'+
+			 					'   <p><b>'+ data.getFormattedValue(27, 8) + '</b><br>'+data.getFormattedValue(28, 8)+'<br>'+data.getFormattedValue(29, 8)+'</p>'+
 			 										// INSERT GOOGLE MAP
 			 					'   <h6><b> Contact Us </b></h6>'+
 			 					'		<p></p>'+
