--- a/about.html
+++ b/about.html
@@ -181,6 +181,8 @@
 					}
 	     
 	      </script>
+	      <script async defer
+        src="https://maps.googleapis.com/maps/api/js?signed_in=true&callback=initMap"></script>
 	    </div>
     </body>
 	  
