--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
 			 					'		<p>'+ data.getFormattedValue(27, 6) + '</p>' +
 			 					'   <h6><b> Corporate Headquarters</b></h6>'+
 			 					'   <p><b>'+ data.getFormattedValue(27, 8) + '</b><br>'+data.getFormattedValue(28, 8)+'<br>'+data.getFormattedValue(29, 8)+'</p>'+
-			 					'		<div id="map"></div>'+
+			 					//'		<div id="map"></div>'+
 			 										// INSERT GOOGLE MAP
 			 					'   <h6><b> Contact Us </b></h6>'+
 			 					'		<p></p>'+
@@ -184,6 +184,7 @@
 	      <script async defer
         src="https://maps.googleapis.com/maps/api/js?signed_in=true&callback=initMap"></script>
 	    </div>
+	    <div id="map"></div>
     </body>
 	  
 	      <footer class="page-footer grey darken-4">
