--- a/about.html
+++ b/about.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
   <html>
     <head>
+    	<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+	    <meta charset="utf-8">
+	    <title>Simple markers</title>
+	    <style>
+	      html, body {
+	        height: 100%;
+	        margin: 0;
+	        padding: 0;
+	      }
+	      #map {
+	        height: 100%;
+	      }
+	    </style>
+	    
       <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     
