--- a/about.html
+++ b/about.html
@@ -154,11 +154,11 @@
 			 		function initMap() {
 					  var map = new google.maps.Map(document.getElementById("map"), {
 					    zoom: 17,
-					    center: myLatLng
+					    center: {lat: 40.76054638113419, lng: -73.97887413743334}
 					  });
 
 					  var marker = new google.maps.Marker({
-					    position: myLatLng,
+					    position: {lat: 40.76054638113419, lng: -73.97887413743334},
 					    map: map,
 					    title: 'Hello World!'
 					  });
