--- a/about.html
+++ b/about.html
@@ -154,13 +154,13 @@
 			 		function initMap() {
 					  var map = new google.maps.Map(document.getElementById("map"), {
 					    zoom: 17,
-					    center: {lat: 40.76054638113419, lng: -73.97887413743334}
+					    center: myLatLng
 					  });
 
 					  var marker = new google.maps.Marker({
-					    position: {lat: 40.76054638113419, lng: -73.97887413743334},
+					    position: myLatLng,
 					    map: map,
-					    title: 'Hello World!'
+					    title: 'Marvel Entertainment, LLC'
 					  });
 					}
 
