--- a/about.html
+++ b/about.html
@@ -50,8 +50,7 @@
 				}
 				else{
 					var MySubmit = "https://docs.google.com/forms/d/e/1FAIpQLSeNn9YIVCYfaR0oU2zxMFz5m1dTFXCWccQzf5gTSce4XuftOA/formResponse?&entry.901983148="+name+"&entry.1927677035="+email+"&entry.215611022="+subject+"&entry.1797893750="+message+"&submit=Submit";
-					$("#formresponse").html(unescape("%3Cscript type='text/javascript' src='" + MySubmit + "'%3E%3C/script%3E"));
-					alert("Thank Your for Contacting Us");
+					var NewOpen = window.open(MySubmit, "_blank", "width=500, height=500");
 				}
 			}
 			</script>
