--- a/about.html
+++ b/about.html
@@ -121,6 +121,7 @@
 			 		<span id="formresponse"></span>
 					<form name="form1" action="javascript:formresponse();">
 						<div data-role="fieldcontain">
+							<i class="material-icons prefix">account_circle</i>
 							<label for="name">YOUR NAME:</label><input type="text" name="name">
 						</div>
 						<div data-role="fieldcontain">
