--- a/about.html
+++ b/about.html
@@ -118,23 +118,25 @@
 		        	<!--下面迴圈的output會寫到這-->
 		      </div>
 		      <h5><b> Contact Us </b></h5>
-			 		<span id="formresponse"></span>
-					<form name="form1" action="javascript:formresponse();">
-						<div data-role="fieldcontain">
-							<i class="material-icons prefix">account_circle</i>
-							<label for="name">YOUR NAME:</label><input type="text" name="name">
-						</div>
-						<div data-role="fieldcontain">
-							<label for="name">YOUR EMAIL:</label><input type="text" name="email">
-						</div>
-						<div data-role="fieldcontain">
-							<label for="name">SUBJECT:</label><input type="text" name="subject">
-						</div>
-						<div data-role="fieldcontain">
-							<label for="name">MESSAGE:</label><input type="text" name="message">
-						</div>
-						<input type="submit" value="Submit">
-					</form>
+		      <div class="card">
+				 		<span id="formresponse"></span>
+						<form name="form1" action="javascript:formresponse();">
+							<div data-role="fieldcontain">
+								<i class="material-icons prefix">account_circle</i>
+								<label for="name">YOUR NAME:</label><input type="text" name="name">
+							</div>
+							<div data-role="fieldcontain">
+								<label for="name">YOUR EMAIL:</label><input type="text" name="email">
+							</div>
+							<div data-role="fieldcontain">
+								<label for="name">SUBJECT:</label><input type="text" name="subject">
+							</div>
+							<div data-role="fieldcontain">
+								<label for="name">MESSAGE:</label><input type="text" name="message">
+							</div>
+							<input type="submit" value="Submit">
+						</form>
+					</div>
 			 		<div class="divider"></div>
 		    </div>
 
