--- a/about.html
+++ b/about.html
@@ -119,6 +119,7 @@
 		      </div>
 		      <h5><b> Contact Us </b></h5>
 		      <div class="card">
+		      	<div class="container">
 				 		<span id="formresponse"></span>
 						<form name="form1" action="javascript:formresponse();">
 							<div data-role="fieldcontain">
@@ -136,6 +137,7 @@
 							</div>
 							<input type="submit" value="Submit">
 						</form>
+						</div>
 					</div>
 			 		<div class="divider"></div>
 		    </div>
