--- a/about.html
+++ b/about.html
@@ -120,6 +120,7 @@
 		      <h5><b> Contact Us </b></h5>
 		      <div class="card">
 		      	<div class="container">
+		      		<div class="card-content">
 				 		<span id="formresponse"></span>
 						<form name="form1" action="javascript:formresponse();">
 							<div data-role="fieldcontain">
@@ -137,6 +138,7 @@
 							</div>
 							<input type="submit" value="Submit">
 						</form>
+						</div>
 						</div>
 					</div>
 			 		<div class="divider"></div>
