--- a/about.html
+++ b/about.html
@@ -121,24 +121,26 @@
 		      <div class="card">
 		      	<div class="container">
 		      		<div class="card-content">
-				 		<span id="formresponse"></span>
-						<form name="form1" action="javascript:formresponse();">
-							<div data-role="fieldcontain">
-								<i class="material-icons prefix">account_circle</i>
-								<label for="name">YOUR NAME:</label><input type="text" name="name">
+						 		<span id="formresponse"></span>
+								<form name="form1" action="javascript:formresponse();">
+									<div data-role="fieldcontain">
+										<i class="material-icons prefix">account_circle</i>
+										<label for="name">YOUR NAME</label><input type="text" name="name">
+									</div>
+									<div data-role="fieldcontain">
+										<i class="material-icons prefix">email</i>
+										<input type="text" name="email">
+										<label for="name">YOUR EMAIL</label>
+									</div>
+									<div data-role="fieldcontain">
+										<label for="name">SUBJECT</label><input type="text" name="subject">
+									</div>
+									<div data-role="fieldcontain">
+										<label for="name">MESSAGE</label><input type="text" name="message">
+									</div>
+									<input type="submit" value="Submit">
+								</form>
 							</div>
-							<div data-role="fieldcontain">
-								<label for="name">YOUR EMAIL:</label><input type="text" name="email">
-							</div>
-							<div data-role="fieldcontain">
-								<label for="name">SUBJECT:</label><input type="text" name="subject">
-							</div>
-							<div data-role="fieldcontain">
-								<label for="name">MESSAGE:</label><input type="text" name="message">
-							</div>
-							<input type="submit" value="Submit">
-						</form>
-						</div>
 						</div>
 					</div>
 			 		<div class="divider"></div>
