--- a/about.html
+++ b/about.html
@@ -129,8 +129,7 @@
 									</div>
 									<div data-role="fieldcontain">
 										<i class="material-icons prefix">email</i>
-										<input type="text" name="email">
-										<label for="name">YOUR EMAIL</label>
+										<label for="name">YOUR EMAIL</label><input type="text" name="email">
 									</div>
 									<div data-role="fieldcontain">
 										<label for="name">SUBJECT</label><input type="text" name="subject">
