--- a/about.html
+++ b/about.html
@@ -135,6 +135,7 @@
 										<label for="name">SUBJECT</label><input type="text" name="subject">
 									</div>
 									<div data-role="fieldcontain">
+										<i class="material-icons prefix">mode_edit</i>
 										<label for="name">MESSAGE</label><input type="text" name="message">
 									</div>
 									<input type="submit" value="Submit">
