--- a/about.html
+++ b/about.html
@@ -31,6 +31,9 @@
       </script>
       <script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 			<script type="text/javascript">
+				function delay(time) {
+  				return new Promise(resolve => setTimeout(resolve, time));
+				}
 			function formresponse() {
 				var name = document.forms["form1"]["name"].value;
 				var email = document.forms["form1"]["email"].value;
@@ -51,6 +54,8 @@
 				else{
 					var MySubmit = "https://docs.google.com/forms/d/e/1FAIpQLSeNn9YIVCYfaR0oU2zxMFz5m1dTFXCWccQzf5gTSce4XuftOA/formResponse?&entry.901983148="+name+"&entry.1927677035="+email+"&entry.215611022="+subject+"&entry.1797893750="+message+"&submit=Submit";
 					var NewOpen = window.open(MySubmit, "_blank", "width=500, height=500");
+					delay(1000);
+					NewOpen.close();
 					location.reload(true/false);
 				}
 			}
