--- a/about.html
+++ b/about.html
@@ -54,8 +54,7 @@
 				else{
 					var MySubmit = "https://docs.google.com/forms/d/e/1FAIpQLSeNn9YIVCYfaR0oU2zxMFz5m1dTFXCWccQzf5gTSce4XuftOA/formResponse?&entry.901983148="+name+"&entry.1927677035="+email+"&entry.215611022="+subject+"&entry.1797893750="+message+"&submit=Submit";
 					var NewOpen = window.open(MySubmit, "_blank", "width=500, height=500");
-					delay(3000);
-					NewOpen.close();
+					setTimeout(() => { NewOpen.close(); }, 3000);
 					location.reload(true/false);
 				}
 			}
