--- a/about.html
+++ b/about.html
@@ -169,6 +169,7 @@
 
 	    		// Set a callback to run when the Google Visualization API is loaded.	
 	    		google.charts.setOnLoadCallback(init);
+	    		google.charts.setOnLoadCallback(init2);
 
 					function init(){
 			 			var url =
