--- a/about.html
+++ b/about.html
@@ -227,7 +227,7 @@
 			 				counter++;
 				 			let T = 
 				 					'<div class="col s12 m6>'+
-				 					'	<div class="card-content">'+
+				 					'	<div class="card">'+
 				 					'		<h5> ' + data.getFormattedValue(i,1) + '</h5>'+
 				 					'		<p>'+ data.getFormattedValue(i, 4) + '</p>' +
 				 					'	</div>'+
