--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 			          			'      		<span class="card-title">'+data.getFormattedValue(i,1)+'</span>'+
 			          			'    	</div>'+
 			          			'    	<div class="card-action grey lighten-1">'+
-			          			'      		<a href="'+data.getFormattedValue(i,3)+'">More-></a>'+
+			          			'      		<a class="red-text text-darken-1" href="'+data.getFormattedValue(i,3)+'">More-></a>'+
 			          			'    	</div>'+
 			          			'  	</div>'+
 			          			'</div>';
