--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 			          			'		<div class="card-image small center grey lighten-1">'+
 			          			'			<img src="'+data.getFormattedValue(i,2)+'">'+
 			          			'		</div>'+
-			          			'    	<div class="card-content grey lighten-1">'+
+			          			'    	<div class="card grey lighten-1">'+
 			          			'      		<span class="card-title">'+data.getFormattedValue(i,1)+'</span>'+
 			          			'    	</div>'+
 			          			'    	<div class="card-action grey lighten-1">'+
